[MOD] API Familias i Swagger
