# app/Http/Controllers/Api/FamiliaController.php
@@ -3,17 +3,36 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Http\Resources\FamiliaResource;
 use App\Models\Familias;
 use Illuminate\Http\Request;
 
-class FamiliasController extends Controller
+class FamiliaController extends Controller
 {
     /**
      * Display a listing of the resource.
      */
+    /**
+     * @OA\Get(
+     *      path="/api/familias",
+     *      operationId="getFamiliasList",
+     *      tags={"Familias"},
+     *      summary="Get list of Familias",
+     *      description="Returns list of Familias",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/FamiliaResource")
+     *       ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     )
+     */
     public function index()
     {
-        //
+        return FamiliaResource::collection(Familias::all());
     }
 
     /**
